      possible covers.
    * Improved guessing tags from filename. Added preview to Dialog.
    * Display frames around lyrics/video applets for indicating focus.
    * Improved keyboard functions when editing lyrics from the applet.
    * Improved automatic resizing of lyrics and suggestions in the context applet.

  BUGFIXES:
    * Fixed crash if user clicks rating widget on the current track applet while no
      track is playing (which is possible since there is a slight delay before the 
      applet switches "mode"). (BR 215471)
    * Made "Last.fm Love" (and potentially other global actions avaiable for all 
      tracks) correctly show up in the Current Track applet.
    * Fixed two bookmark actions having the same text description. (BR 214716)
    * Remove broken right click menu from the Info applet. (BR 206642)
    * Fix several bugs handling changing compilations. Patch by Morten Sjøgren
      <m_abs@mabs.dk> -- thanks!
    * Fixed bug with panel header icon size. (BR 208616)
    * Fixed bug with OSD not being shown by dbus call. (BR 208424)
    * Fixed bug with importing scores from Amarok 1.4. Patch by Michal Ziabkowski
      <mziab@o2.pl>. (BR 174444)
    * Fixed wikipedia applet poorly showing wikipedia main page when a track 
      tag is empty.
    * Magnatune.com store: Album cover is now correctly fetched when redownloading.
    * Magnatune.com store: Fixed crash when redownloading album: (BR 217148)
    * Fixed crash when doing "Edit Track Details" on media device. (BR 217143)
    * Fixed layout resizing bug with Qt 4.6. (BR 213990)
    * Fixed corrupted track lengths when copying to iPod. Patch by Christophe 
      Fergeau <teuf@gnome.org> (BR: 215124)
    * Fixed videoclip applet going blank when switching from one video to 
      another. (BR 210332)
    * Fixed dailymotion video file direct link retrieving not working. (BR 214168)
    * Fixed wikipedia engine not parsing correctly URL containing ":". (BR 209397)